--- a/apps/frontend-app/package.json
+++ b/apps/frontend-app/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
