--- a/apps/frontend-app/package.json
+++ b/apps/frontend-app/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.3.0",
